creando la rama cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,5 +9,15 @@
         <div id="container">
             <h4>Esta es una prueba para ver la creación de ramas en git</h4>
         </div>
+        <h1>Hola mundo html5</h1>
+        <p>Bienvenidos al mundo git</p>
+        <div id="container">
+            <h4>Esta es una prueba para ver la creación de ramas en git</h4>
+        </div>
+        <h1>Hola mundo html5</h1>
+        <p>Bienvenidos al mundo git</p>
+        <div id="container">
+            <h4>Esta es una prueba para ver la creación de ramas en git</h4>
+        </div>
     </body>
 </html>
