nuevas seccion de videojuegos

--- a/blogspot.html
+++ b/blogspot.html
@@ -9,15 +9,8 @@
         <div id="container">
             <h4>Esta es una prueba para ver la creación de ramas en git</h4>
         </div>
-        <h1>Hola mundo html5</h1>
-        <p>Bienvenidos al mundo git</p>
-        <div id="container">
-            <h4>Esta es una prueba para ver la creación de ramas en git</h4>
-        </div>
-        <h1>Hola mundo html5</h1>
-        <p>Bienvenidos al mundo git</p>
-        <div id="container">
-            <h1>Esta es una prueba para ver la creación de ramas en git</h1>
+        <div id="game">
+            <p>jugar videojuegos es muy entretenido</p>
         </div>
     </body>
 </html>
