nuevo div y estilos

--- a/blogspot.html
+++ b/blogspot.html
@@ -4,8 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Hola mundo html5</h1>
-        <p>Bienvenidos al mundo git</p>
+       <div id="blog">
+           <p>
+               Hola amigos bienvenidos al mi nuevo blog
+           </p>
+       </div>
       
     </body>
 </html>
