nuevo estilo en futbol y nuevo parrafo

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="futbol">
             <p>El sabado es la final de la champions league</p>
             <p>Hay que jugar futbol el sabado por el partido que habra</p>
+            <p>el america no pudo ser campeon</p>
         </div>
        <div id="blog">
            <p>
