--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
         <h1>Hola mundo html5</h1>
         <p>Bienvenidos al mundo git</p>
         <div id="container">
-            <h4>Esta es una prueba para ver la creación de ramas en git</h4>
+            <h4>Esta es una prueba para ver la creacion de ramas en git</h4>
         </div>
         <div id="futbol">
             <p>El sabado es la final de la champions league</p>
