--- a/blogspot.html
+++ b/blogspot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Mi proyecto actual</title>
+        <title>Mi proyecto actual de Git</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
